--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 						<div class="main_about_content text-center wow fadeIn" data-wow-duration="1.5s">
 						   <div class="col-md-12">
-                 <img class="image" src="images/skv.jpg" alt="imageofsaket">
+                 <img class="image" src="images/skv.JPG" alt="imageofsaket">
 								<div class="about_top_content">
 									<i class="fa fa-quote-right"></i>
 									<p>I am saket kumar vishwakarma from Lucknow. I am pursuing my B.Tech in computer science and engineering from Shri Ramswaroop Memorial University,Lucknow. I had completed 10th  and 12th from Colonelganj Inter College,Allahabad and secured 84% and 79% respectively. My technical skills are JAVA,Python,NodeJS ,JavaScript,HTML,CSS,Express.I am preety familier with DataBase As MongoDB and MySQL.I am quick learner and work in a team.I love to play Online games and Sometimes I want to cook something new.</p>
