--- a/index.html
+++ b/index.html
@@ -60,6 +60,37 @@
 									<div>
 										<h4 id="bottom_title">My Skill</h4>
 									</div>
+									 <div class="wrapper">
+    <div class="row pt-5 pb-5">
+      <div class="col-6 col-sm-3">
+        <div class="counter" data-cp-percentage="75" data-cp-color="#00bfeb">
+        </div>
+        <h4>SKILLS</h4>
+        <p>Lorem ipsum dolor sit amet, consecte elit. Condimentum porttitor cursumus.</p>
+      </div>
+      <div class="col-6 col-sm-3">
+        <div class="counter" data-cp-percentage="65" data-cp-color="#EA4C89"></div>
+        <h4>CONTENT</h4>
+        <p>Lorem ipsum dolor sit amet, consecte elit. Condimentum porttitor cursumus.</p>
+      </div>
+      <div class="col-6 col-sm-3">
+        <div class="counter" data-cp-percentage="35" data-cp-color="#FF675B"></div>
+        
+        <h4>WEB SITES</h4>
+        <p>Lorem ipsum dolor sit amet, consecte elit. Condimentum porttitor cursumus.</p>
+      </div>
+      <div class="col-6 col-sm-3">
+        <div class="counter" data-cp-percentage="44" data-cp-color="#FF9900"></div>
+        <h4>EMPLOYEES</h4>
+        <p>Lorem ipsum dolor sit amet, consecte elit. Condimentum porttitor cursumus.</p>
+      </div>
+    </div>
+  </div>
+  <button class="btn-update">update</button>
+</div>
+<p class="p-3">
+  HTML and JS Circular Progress bar, developed with canvas and some nice easing- animation. Feel free to use. <br />You could mention this codepen
+</p>
 									<img src="https://cdn0.iconfinder.com/data/icons/HTML5/512/HTML_Logo.png" alt="" />
 									<img src="https://user-images.githubusercontent.com/14293805/36941746-0d65c6fa-1f63-11e8-8afa-ab2d28de86db.png" alt="" />
 									<img src="http://pluspng.com/img-png/nodejs-logo-vector-png-node-js-logo-nodejs-javascript-source-code-960.png" alt="" />
